--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,8 +98,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
     
-    - name: Run E2E tests
-      run: pytest tests/e2e/ -v
+    - name: Run E2E BDD tests
+      run: |
+        echo "🧪 Running E2E BDD tests (Idea→Balanced Pack)..."
+        pytest tests/e2e/ -v --tb=short
 
   schema-validation:
     name: Schema Validation
@@ -246,3 +248,46 @@ jobs:
         else:
             print('✅ Determinism check passed - outputs are identical (excluding timestamps)')
         "
+
+  performance:
+    name: Performance Regression Tests
+    needs: test
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+        cache: 'pip'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e ".[dev]"
+        pip install psutil  # For memory monitoring
+    
+    - name: Run performance tests
+      env:
+        CI: true  # Enable CI mode for performance tests
+      run: |
+        echo "🔬 Running performance regression tests..."
+        pytest tests/performance/ -v -s
+    
+    - name: Store performance baseline
+      uses: actions/upload-artifact@v3
+      if: github.ref == 'refs/heads/main'
+      with:
+        name: performance-baseline
+        path: tests/performance/baseline_measurements.json
+        retention-days: 30
+    
+    - name: Download previous baseline
+      uses: actions/download-artifact@v3
+      if: github.event_name == 'pull_request'
+      continue-on-error: true
+      with:
+        name: performance-baseline
+        path: tests/performance/
